[gd_scene load_steps=10 format=3 uid="uid://b3tmvuyh013w0"]

[ext_resource type="Script" path="res://Assets/Script/Class/Wolf/Wolf Alamanac/Index/Wolf_Almanac_Index_Page_6.gd" id="1_le2w8"]
[ext_resource type="Texture2D" uid="uid://d04k2qksoa13u" path="res://Assets/Image/images/Background/Wolf Almanac Index/Wood Texture.png" id="2_g24qa"]
[ext_resource type="FontFile" uid="uid://b0dbrpth4h70i" path="res://Assets/Fonts/DisposableDroidBB_bldital.ttf" id="3_rbws5"]
[ext_resource type="Texture2D" uid="uid://da13nuc1gskxn" path="res://Assets/Image/Buttons/Button.png" id="4_bgdw6"]
[ext_resource type="Texture2D" uid="uid://ceov1ogbf4c2w" path="res://Assets/Scences/UI/Lock_Button/Lock_buttons.tres" id="4_dlj78"]
[ext_resource type="Theme" uid="uid://dk2f873t2ffc2" path="res://Assets/Theme/Wolf_Almanac_Idex/Button.tres" id="4_mjybs"]
[ext_resource type="AudioStream" uid="uid://dfx8n3eqhipk0" path="res://Assets/Music/All Button/Button.mp3" id="5_gxn3y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k0rlb"]
atlas = ExtResource("4_bgdw6")
region = Rect2(1389, 668, 182, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_rieji"]
atlas = ExtResource("4_bgdw6")
region = Rect2(1389, 668, 182, 189)

[node name="WolfAlamacIndexPage6" type="Node2D"]
script = ExtResource("1_le2w8")

[node name="Background" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1280, 720)
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_g24qa")
expand_mode = 1

[node name="Tittle_Label" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -158.0
offset_right = 158.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_shadow_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_outline_color = Color(0.976471, 0.592157, 0.415686, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("3_rbws5")
theme_override_font_sizes/font_size = 44
text = "Wolf Species List
"

[node name="Almanac Index" type="GridContainer" parent="Background"]
clip_contents = true
layout_direction = 1
layout_mode = 0
offset_left = 50.0
offset_top = 44.0
offset_right = 1236.0
offset_bottom = 661.0
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 10
columns = 3

[node name="WolfVBoxContainer16" type="VBoxContainer" parent="Background/Almanac Index"]
custom_minimum_size = Vector2(245, 245)
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3

[node name="Wolf 16" type="TextureButton" parent="Background/Almanac Index/WolfVBoxContainer16"]
custom_minimum_size = Vector2(385, 555)
layout_mode = 2
texture_disabled = SubResource("AtlasTexture_k0rlb")
ignore_texture_size = true
stretch_mode = 0

[node name="Label_Wolf_16" type="Button" parent="Background/Almanac Index/WolfVBoxContainer16"]
layout_mode = 2
theme = ExtResource("4_mjybs")
theme_override_fonts/font = ExtResource("3_rbws5")
theme_override_font_sizes/font_size = 24
text = "Wolf Label"
flat = true

[node name="WolfVBoxContainer17" type="VBoxContainer" parent="Background/Almanac Index"]
layout_mode = 2

[node name="Wolf 17" type="TextureButton" parent="Background/Almanac Index/WolfVBoxContainer17"]
custom_minimum_size = Vector2(385, 555)
layout_mode = 2
texture_disabled = SubResource("AtlasTexture_rieji")
ignore_texture_size = true
stretch_mode = 0

[node name="Label_Wolf_17" type="Button" parent="Background/Almanac Index/WolfVBoxContainer17"]
layout_mode = 2
theme = ExtResource("4_mjybs")
text = "Wolf Label"
flat = true

[node name="WolfVBoxContainer18" type="VBoxContainer" parent="Background/Almanac Index"]
layout_mode = 2

[node name="Wolf 18" type="TextureButton" parent="Background/Almanac Index/WolfVBoxContainer18"]
clip_contents = true
custom_minimum_size = Vector2(385, 555)
layout_mode = 2
texture_disabled = ExtResource("4_dlj78")
ignore_texture_size = true
stretch_mode = 0

[node name="Label_Wolf_18" type="Button" parent="Background/Almanac Index/WolfVBoxContainer18"]
custom_minimum_size = Vector2(355, 24)
layout_mode = 2
theme = ExtResource("4_mjybs")
text = "Wolf Label"
flat = true

[node name="Back Button Page 5" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.051
anchor_top = 0.886
anchor_right = 0.094
anchor_bottom = 0.931
offset_left = -0.280006
offset_top = 0.0799561
offset_right = -0.320007
offset_bottom = -0.320068
theme_override_fonts/font = ExtResource("3_rbws5")
theme_override_font_sizes/font_size = 24
text = "Back
"
flat = true

[node name="Next Buttton Page 7" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.927
anchor_top = 0.886
anchor_right = 0.97
anchor_bottom = 0.931
offset_left = 0.439941
offset_top = 0.0799561
offset_right = -0.600098
offset_bottom = -0.320068
theme_override_fonts/font = ExtResource("3_rbws5")
theme_override_font_sizes/font_size = 24
text = "Next"
flat = true

[node name="Page Label" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.466
anchor_top = 0.901
anchor_right = 0.55
anchor_bottom = 0.935
offset_left = 11.52
offset_top = 1.27997
offset_right = -12.0
offset_bottom = -0.200073
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_rbws5")
theme_override_font_sizes/font_size = 24
text = "Page 6 of 9"

[node name="Button_Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_gxn3y")

[connection signal="pressed" from="Background/Almanac Index/WolfVBoxContainer16/Wolf 16" to="." method="_on_interior_alaskan_wolf_image_pressed"]
[connection signal="pressed" from="Background/Almanac Index/WolfVBoxContainer16/Label_Wolf_16" to="." method="_on_interior_alaskan_wolf_label_pressed"]
[connection signal="pressed" from="Background/Almanac Index/WolfVBoxContainer17/Wolf 17" to="." method="_on_italian_wolf_image_pressed"]
[connection signal="pressed" from="Background/Almanac Index/WolfVBoxContainer17/Label_Wolf_17" to="." method="_on_italian_wolf_label_pressed"]
[connection signal="pressed" from="Background/Almanac Index/WolfVBoxContainer18/Wolf 18" to="." method="_on_labrador_wolf_image_pressed"]
[connection signal="pressed" from="Background/Almanac Index/WolfVBoxContainer18/Label_Wolf_18" to="." method="_on_labrador_wolf_label_pressed"]
[connection signal="pressed" from="Background/Back Button Page 5" to="." method="_on_back_page_5_button_pressed"]
[connection signal="pressed" from="Background/Next Buttton Page 7" to="." method="_on_next_page_7_button_pressed"]
